@@ -1,12 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.86 2005/03/18 06:46:59 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.87 2005/03/19 04:39:35 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   18 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Add sigunmask.c contributed by d_m (on freenode) to counteract python's
-  retarted behavior regarding threads and signals.
+  retarted behavior regarding threads and signals. Add code to convert MB/%/*
+  to start/end sectors
 
   17 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Add 2>&1 to cmd in spawn()
